<resources>
    <string name="app_name">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="degree_symbol">\u00B0</string>
    <string name="today">Today</string>
    <string name="sunrise">SUNRISE</string>
    <string name="sunset">SUNSET</string>
    <string name="humidity">HUMIDITY</string>
    <string name="wind">WIND</string>
    <string name="visibility">VISIBILITY</string>
    <string name="pressure">PRESSURE</string>
    <string name="disconnected">Disconnected</string>
</resources>
