<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/forecast_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixty_dps"
        android:layout_marginStart="@dimen/sixteen_dps"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:ellipsize="end"
        android:textSize="@dimen/sixteen_sps"
        android:textColor="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/sixteen_dps"
        android:layout_marginEnd="@dimen/sixteen_dps"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixty_dps"
        android:layout_marginStart="@dimen/sixteen_dps"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunrise"
                android:textSize="@dimen/fourteen_sps"
                android:textColor="@color/white_eighty_five"/>

            <TextView
                android:id="@+id/forecast_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/twenty_five_dps"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunset"
                android:textSize="@dimen/fourteen_sps"
                android:textColor="@color/white_eighty_five"/>

            <TextView
                android:id="@+id/forecast_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/twenty_five_dps"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/sixteen_dps"
        android:layout_marginEnd="@dimen/sixteen_dps"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixty_dps"
        android:layout_marginStart="@dimen/sixteen_dps"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="@dimen/fourteen_sps"
                android:textColor="@color/white_eighty_five"/>

            <TextView
                android:id="@+id/forecast_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/twenty_five_dps"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textSize="@dimen/fourteen_sps"
                android:textColor="@color/white_eighty_five"/>

            <TextView
                android:id="@+id/forecast_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/twenty_five_dps"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/sixteen_dps"
        android:layout_marginEnd="@dimen/sixteen_dps"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixty_dps"
        android:layout_marginStart="@dimen/sixteen_dps"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textSize="@dimen/fourteen_sps"
                android:textColor="@color/white_eighty_five"/>

            <TextView
                android:id="@+id/forecast_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/twenty_five_dps"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visibility"
                android:textSize="@dimen/fourteen_sps"
                android:textColor="@color/white_eighty_five"/>

            <TextView
                android:id="@+id/forecast_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/twenty_five_dps"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>